syntax = "proto3";

option go_package = "github.com/budsx/synapsis/order-service/proto;order";

package order;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
    int64 product_id = 1;
    int32 quantity = 2;
}

message CreateOrderResponse {
    int64 order_id = 1;
}